--- a/index.html
+++ b/index.html
@@ -9,59 +9,93 @@
 <body>
 
     <header>
-        <h1>Renalyn Pino</h1>
-        <p>Computer Science Student | Aspiring Data Analyst</p>
+        <div class="profile-container">
+            <img src="./profile.jpg" alt="Renalyn N. Pino" class="profile-photo">
+            <div class="profile-info">
+                <h1>Renalyn N. Pino</h1>
+                <p class="title">Computer Science Student</p>
+            </div>
+        </div>
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link active">Home</a>
+            <a href="projects.html" class="nav-link">Projects</a>
+            <a href="certificates.html" class="nav-link">Certificates</a>
+            <a href="contact.html" class="nav-link">Contact</a>
+        </nav>
     </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            I am a Computer Science student with interests in data analysis, machine learning,
-            and web development. I enjoy working on real-world projects and continuously
-            improving my technical skills.
-        </p>
-    </section>
+    <div class="main-container">
+        <div class="center-content">
+            <section id="about">
+                <h2>Welcome to my Portfolio!</h2>
+                <p style="text-align: center;">
+                    This portfolio presents my academic background, technical skills, and selected projects developed during my Computer Science studies.
+                </p>
+            </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
+            <section id="objectives">
+                <h2>Objectives</h2>
+                <p style="text-align: center;">
+                    A 4th-year Computer Science student seeking an internship to apply skills in 
+                    data analysis, problem-solving, computer literacy, and foundational programming. 
+                    Motivated to gain hands-on experience, contribute to meaningful projects, and 
+                    continuously improve technical and professional skills in a collaborative work 
+                    environment.
+                </p>
+            </section>
 
-        <div class="project">
-            <h3>Bee Colony Monitoring System</h3>
-            <p>
-                Developed a system using image processing and machine learning to detect
-                brood stages and queen cell maturity from real bee farm data.
-            </p>
+            <section id="skills">
+                <h2>Skills</h2>
+                <div class="skills-category">
+                    <h3>Technical Skills</h3>
+                    <div class="skills-list">
+                        <span class="skill">MS Tools</span>
+                        <span class="skill">SQL</span>
+                        <span class="skill">Data Analysis and Visualization</span>
+                        <span class="skill">Machine Learning</span>
+                        <span class="skill">Deep Learning</span>
+                        <span class="skill">Computer Vision</span>
+                        <span class="skill">UI/UX Development</span>
+                        <span class="skill">Databases</span>
+                        <span class="skill">GitHub</span>
+                        <span class="skill">Google Colab</span>
+                        <span class="skill">Visual Studio Code</span>
+                        <span class="skill">Basic Electronic Circuits</span>
+                    </div>
+                </div>
+                <div class="skills-category">
+                    <h3>Soft Skills</h3>
+                    <div class="skills-list">
+                        <span class="skill">Problem-solving</span>
+                        <span class="skill">Critical thinking</span>
+                        <span class="skill">Communication</span>
+                        <span class="skill">Collaboration</span>
+                        <span class="skill">Adaptability</span>
+                        <span class="skill">Time management</span>
+                        <span class="skill">Initiative</span>
+                        <span class="skill">Work ethic</span>
+                    </div>
+                </div>
+            </section>
         </div>
+    </div>
 
-        <div class="project">
-            <h3>Computer Repair Shop Management System</h3>
-            <p>
-                A web-based system built with PHP and MySQL to manage repair requests,
-                customers, and services.
-            </p>
-        </div>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>Data Analysis</li>
-            <li>Machine Learning</li>
-            <li>HTML & CSS</li>
-            <li>Git & GitHub</li>
-        </ul>
-    </section>
-
-    <section id="contact">
+    <div class="contact-footer" id="contact-footer">
         <h2>Contact</h2>
-        <p>Email: renalynpino@example.com</p>
-        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-    </section>
+        <div class="contact-info">
+            <p><strong>Email:</strong> renalynpino27@example.com</p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">https://github.com/renalynpino</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">https://www.linkedin.com/in/renalyn-pino-6b5951178/</a></p>
+        </div>
+    </div>
 
     <footer>
-        <p>© 2026 Renalyn Pino</p>
+        <p>© 2026 Renalyn N. Pino</p>
     </footer>
+
+    <script>
+        // No JavaScript needed for navigation - using HTML links
+    </script>
 
 </body>
 </html>
