--- a/certificates.html
+++ b/certificates.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1000, initial-scale=0.5, user-scalable=yes">
+    <meta name="viewport" content="width=1000, user-scalable=no">
     <title>Certificates | Renalyn N. Pino</title>
     <link rel="stylesheet" href="style.css">
 </head>
