--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,15 @@
         </section>
     </div>
 
+    <div class="contact-footer">
+        <h2>Contact</h2>
+        <div class="contact-info">
+            <p><strong>Email:</strong> renalynpino27@gmail.com</p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/renalynpino" target="_blank">https://github.com/renalynpino</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/renalyn-pino-6b5951178/" target="_blank">https://www.linkedin.com/in/renalyn-pino-6b5951178/</a></p>
+        </div>
+    </div>
+
     <footer>
         <p>© 2026 Renalyn N. Pino</p>
     </footer>
