modified:   certificates.html 	modified:   index.html 	modified:   projects.html

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
     <div class="contact-footer" id="contact-footer">
         <h2>Contact</h2>
         <div class="contact-info">
-            <p><strong>Email:</strong> renalynpino27@example.com</p>
+            <p><strong>Email:</strong> renalynpino27@gmail.com</p>
             <p><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">https://github.com/renalynpino</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">https://www.linkedin.com/in/renalyn-pino-6b5951178/</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">https://www.linkedin.com/in/renalyn-pino-6b5951178</a></p>
         </div>
     </div>
 
