Add landing page with welcome section and arrow button

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Renalyn Pino | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="landing-page">
 
-    <header>
+    <div class="landing-container">
         <div class="profile-container">
             <img src="./profile.jpg" alt="Renalyn N. Pino" class="profile-photo">
             <div class="profile-info">
@@ -16,86 +16,18 @@
                 <p class="title">Computer Science Student</p>
             </div>
         </div>
-        <nav class="main-nav">
-            <a href="index.html" class="nav-link active">Home</a>
-            <a href="projects.html" class="nav-link">Projects</a>
-            <a href="certificates.html" class="nav-link">Certificates</a>
-            <a href="contact.html" class="nav-link">Contact</a>
-        </nav>
-    </header>
 
-    <div class="main-container">
-        <div class="center-content">
-            <section id="about">
-                <h2>Welcome to my Portfolio!</h2>
-                <p style="text-align: center;">
-                    This portfolio presents my academic background, technical skills, and selected projects developed during my Computer Science studies.
-                </p>
-            </section>
-
-            <section id="objectives">
-                <h2>Objectives</h2>
-                <p style="text-align: center;">
-                    A 4th-year Computer Science student seeking an internship to apply skills in 
-                    data analysis, problem-solving, computer literacy, and foundational programming. 
-                    Motivated to gain hands-on experience, contribute to meaningful projects, and 
-                    continuously improve technical and professional skills in a collaborative work 
-                    environment.
-                </p>
-            </section>
-
-            <section id="skills">
-                <h2>Skills</h2>
-                <div class="skills-category">
-                    <h3>Technical Skills</h3>
-                    <div class="skills-list">
-                        <span class="skill">MS Tools</span>
-                        <span class="skill">SQL</span>
-                        <span class="skill">Data Analysis and Visualization</span>
-                        <span class="skill">Machine Learning</span>
-                        <span class="skill">Deep Learning</span>
-                        <span class="skill">Computer Vision</span>
-                        <span class="skill">UI/UX Development</span>
-                        <span class="skill">Databases</span>
-                        <span class="skill">GitHub</span>
-                        <span class="skill">Google Colab</span>
-                        <span class="skill">Visual Studio Code</span>
-                        <span class="skill">Basic Electronic Circuits</span>
-                    </div>
-                </div>
-                <div class="skills-category">
-                    <h3>Soft Skills</h3>
-                    <div class="skills-list">
-                        <span class="skill">Problem-solving</span>
-                        <span class="skill">Critical thinking</span>
-                        <span class="skill">Communication</span>
-                        <span class="skill">Collaboration</span>
-                        <span class="skill">Adaptability</span>
-                        <span class="skill">Time management</span>
-                        <span class="skill">Initiative</span>
-                        <span class="skill">Work ethic</span>
-                    </div>
-                </div>
-            </section>
+        <div class="welcome-section">
+            <h2>Welcome to my Portfolio!</h2>
+            <p>
+                This portfolio presents my academic background, technical skills, and selected projects developed during my Computer Science studies.
+            </p>
         </div>
+
+        <a href="home.html" class="arrow-button">
+            <span>▼</span>
+        </a>
     </div>
-
-    <div class="contact-footer" id="contact-footer">
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <p><strong>Email:</strong> renalynpino27@gmail.com</p>
-            <p><strong>GitHub:</strong> <a href="https://github.com/yourusername" target="_blank">https://github.com/renalynpino</a></p>
-            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/yourusername" target="_blank">https://www.linkedin.com/in/renalyn-pino-6b5951178</a></p>
-        </div>
-    </div>
-
-    <footer>
-        <p>© 2026 Renalyn N. Pino</p>
-    </footer>
-
-    <script>
-        // No JavaScript needed for navigation - using HTML links
-    </script>
 
 </body>
 </html>
