--- a/certificates.html
+++ b/certificates.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <nav class="main-nav">
-            <a href="index.html" class="nav-link">Home</a>
+            <a href="home.html" class="nav-link">Home</a>
             <a href="projects.html" class="nav-link">Projects</a>
             <a href="certificates.html" class="nav-link active">Certificates</a>
             <a href="contact.html" class="nav-link">Contact</a>
