Move arrow button to right side with right-pointing arrow

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <a href="home.html" class="arrow-button">
-            <span>▼</span>
+            <span>→</span>
         </a>
     </div>
 
