Fix certificate image paths to use relative URLs

--- a/certificates.html
+++ b/certificates.html
@@ -31,40 +31,64 @@
                 <h3>Academic Excellence</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
-                        <p><strong>Award:</strong> Dean's List - Computer Science Program</p>
-                        <p><strong>Year:</strong> 2023-2024</p>
-                        <p><strong>Details:</strong> Maintained high academic performance with GPA above 3.5 throughout the academic year.</p>
+                        <p><strong>Award:</strong> Certificate of Participation</p>
+                        <p><strong>Year:</strong> April 17, 2021</p>
+                        <p><strong>Details:</strong> Successfully participated in Python for Beginners.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="cert1.jpg" alt="Academic Excellence Certificate" class="cert-img">
+                        <img src="./certificates/PythonForBeginners.jpg" alt="Academic Excellence Certificate" class="cert-img">
                     </div>
                 </div>
             </div>
-
+             <div class="certificate-item">
+                <h3>Programming Certification</h3>
+                <div class="certificate-content">
+                    <div class="certificate-info">
+                        <p><strong>Award:</strong> Certificate of Course Completion</p>
+                        <p><strong>Date:</strong> September 29, 2025</p>
+                        <p><strong>Details:</strong> Successfully achieved student level credential for completing the Data Analytics Essential course for total of 30 hours.</p>
+                    </div>
+                    <div class="certificate-image">
+                        <img src="./certificates/DataAnalyticsCourse.png" alt="Python Programming Certificate" class="cert-img">
+                    </div>
+                </div>
+            </div>
             <div class="certificate-item">
                 <h3>Programming Certification</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
-                        <p><strong>Certificate:</strong> Python Programming Certificate</p>
-                        <p><strong>Provider:</strong> Online Course Platform</p>
-                        <p><strong>Skills Covered:</strong> Data structures, algorithms, web development, data analysis</p>
+                        <p><strong>Certificate:</strong> Certificate of Course Completion</p>
+                        <p><strong>Date:</strong> December 12, 2025</p>
+                        <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to data Science course for total of 6 hours.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="cert2.jpg" alt="Python Programming Certificate" class="cert-img">
+                        <img src="./certificates/DataScienceCourse.png" alt="Python Programming Certificate" class="cert-img">
                     </div>
                 </div>
             </div>
-
             <div class="certificate-item">
                 <h3>Project Recognition</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
-                        <p><strong>Award:</strong> Best Capstone Project</p>
-                        <p><strong>Project:</strong> Bee Colony Monitoring System</p>
-                        <p><strong>Recognition:</strong> Outstanding innovation in applying AI to agricultural technology</p>
+                        <p><strong>Award:</strong> Certificate of Participation</p>
+                        <p><strong>Date:</strong> December 12, 2025</p>
+                        <p><strong>Details:</strong> Actively participating in the Hour of AI.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="cert3.jpg" alt="Project Recognition Certificate" class="cert-img">
+                        <img src="./certificates/HourOfAI.png" alt="Project Recognition Certificate" class="cert-img">
+                    </div>
+                </div>
+            </div>
+            <div class="certificate-item">
+                <h3>Project Recognition</h3>
+                <div class="certificate-content">
+                    <div class="certificate-info">
+                        <p><strong>Award:</strong> Certificate of Course Completion</p>
+                        <p><strong>Date:</strong> January 8, 2026</p>
+                        <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to Cybersecurity course for total of 6 hours.</p>
+                    </div>
+                    <div class="certificate-image">
+                        <img src="./certificates/CyberSecurityCourse.png" alt="Project Recognition Certificate" class="cert-img">
                     </div>
                 </div>
             </div>
