--- a/certificates.html
+++ b/certificates.html
@@ -36,7 +36,7 @@
                         <p><strong>Details:</strong> Successfully participated in Python for Beginners.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="./certificates/PythonForBeginners.jpg" alt="Academic Excellence Certificate" class="cert-img">
+                        <img src="./certificates/PythonForBeginners.jpg" alt="Academic Excellence Certificate" class="cert-img" onclick="openModal(this.src)">
                     </div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
                         <p><strong>Details:</strong> Successfully achieved student level credential for completing the Data Analytics Essential course for total of 30 hours.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="./certificates/DataAnalyticsCourse.png" alt="Python Programming Certificate" class="cert-img">
+                        <img src="./certificates/DataAnalyticsCourse.png" alt="Python Programming Certificate" class="cert-img" onclick="openModal(this.src)">
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to data Science course for total of 6 hours.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="./certificates/DataScienceCourse.png" alt="Python Programming Certificate" class="cert-img">
+                        <img src="./certificates/DataScienceCourse.png" alt="Python Programming Certificate" class="cert-img" onclick="openModal(this.src)">
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                         <p><strong>Details:</strong> Actively participating in the Hour of AI.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="./certificates/HourOfAI.png" alt="Project Recognition Certificate" class="cert-img">
+                        <img src="./certificates/HourOfAI.png" alt="Project Recognition Certificate" class="cert-img" onclick="openModal(this.src)">
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                         <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to Cybersecurity course for total of 6 hours.</p>
                     </div>
                     <div class="certificate-image">
-                        <img src="./certificates/CyberSecurityCourse.png" alt="Project Recognition Certificate" class="cert-img">
+                        <img src="./certificates/CyberSecurityCourse.png" alt="Project Recognition Certificate" class="cert-img" onclick="openModal(this.src)">
                     </div>
                 </div>
             </div>
@@ -107,6 +107,23 @@
     <footer>
         <p>© 2026 Renalyn N. Pino</p>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal" onclick="closeModal()">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+
+    <script>
+        function openModal(src) {
+            document.getElementById('imageModal').style.display = 'flex';
+            document.getElementById('modalImage').src = src;
+        }
+
+        function closeModal() {
+            document.getElementById('imageModal').style.display = 'none';
+        }
+    </script>
 
 </body>
 </html>
