Minimize gap between contact footer and copyright footer

--- a/certificates.html
+++ b/certificates.html
@@ -59,7 +59,7 @@
                     <div class="certificate-info">
                         <p><strong>Certificate:</strong> Certificate of Course Completion</p>
                         <p><strong>Date:</strong> December 12, 2025</p>
-                        <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to data Science course for total of 6 hours.</p>
+                        <p><strong>Details:</strong> Successfully achieved student level credential for completing the Introduction to Data Science course for total of 6 hours.</p>
                     </div>
                     <div class="certificate-image">
                         <img src="./certificates/DataScienceCourse.png" alt="Python Programming Certificate" class="cert-img" onclick="openModal(this.src)">
