Add inline touch-action to prevent zoom on projects and certificates

--- a/certificates.html
+++ b/certificates.html
@@ -17,10 +17,10 @@
             </div>
         </div>
         <nav class="main-nav">
-            <a href="home.html" class="nav-link">Home</a>
-            <a href="projects.html" class="nav-link">Projects</a>
-            <a href="certificates.html" class="nav-link active">Certificates</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="home.html" class="nav-link" style="touch-action: manipulation;">Home</a>
+            <a href="projects.html" class="nav-link" style="touch-action: manipulation;">Projects</a>
+            <a href="certificates.html" class="nav-link active" style="touch-action: manipulation;">Certificates</a>
+            <a href="contact.html" class="nav-link" style="touch-action: manipulation;">Contact</a>
         </nav>
     </header>
 
