--- a/certificates.html
+++ b/certificates.html
@@ -123,6 +123,16 @@
         function closeModal() {
             document.getElementById('imageModal').style.display = 'none';
         }
+
+        // Prevent zoom on double tap
+        let lastTouchEnd = 0;
+        document.addEventListener('touchend', function (event) {
+            const now = (new Date()).getTime();
+            if (now - lastTouchEnd <= 300) {
+                event.preventDefault();
+            }
+            lastTouchEnd = now;
+        }, false);
     </script>
 
 </body>
