--- a/projects.html
+++ b/projects.html
@@ -83,6 +83,16 @@
                 arrow.textContent = '▲';
             }
         }
+
+        // Prevent zoom on double tap
+        let lastTouchEnd = 0;
+        document.addEventListener('touchend', function (event) {
+            const now = (new Date()).getTime();
+            if (now - lastTouchEnd <= 300) {
+                event.preventDefault();
+            }
+            lastTouchEnd = now;
+        }, false);
     </script>
 
 </body>
