--- a/certificates.html
+++ b/certificates.html
@@ -115,6 +115,11 @@
     </div>
 
     <script>
+        // Force viewport reset on page load
+        window.addEventListener('load', function() {
+            document.querySelector('meta[name="viewport"]').setAttribute('content', 'width=1000, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
+        });
+
         function openModal(src) {
             document.getElementById('imageModal').style.display = 'flex';
             document.getElementById('modalImage').src = src;
