--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1000, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Renalyn N. Pino</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -71,15 +71,10 @@
     </footer>
 
     <script>
-        // Force viewport reset on page load
-        window.addEventListener('load', function() {
-            document.querySelector('meta[name="viewport"]').setAttribute('content', 'width=1000, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
-        });
-
         function toggleDetails(id) {
             const details = document.getElementById(id);
             const arrow = details.previousElementSibling.querySelector('.arrow');
-            
+
             if (details.style.display === 'block') {
                 details.style.display = 'none';
                 arrow.textContent = '▼';
@@ -88,16 +83,6 @@
                 arrow.textContent = '▲';
             }
         }
-
-        // Prevent zoom on double tap
-        let lastTouchEnd = 0;
-        document.addEventListener('touchend', function (event) {
-            const now = (new Date()).getTime();
-            if (now - lastTouchEnd <= 300) {
-                event.preventDefault();
-            }
-            lastTouchEnd = now;
-        }, false);
     </script>
 
 </body>
