modified:   certificates.html

--- a/certificates.html
+++ b/certificates.html
@@ -26,9 +26,9 @@
 
     <div class="page-container">
         <section id="certificates">
-            <h2>Achievements & Certificates</h2>
+            <h2>Certificates</h2>
             <div class="certificate-item">
-                <h3>Academic Excellence</h3>
+                <h3>Webinar Participation</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
                         <p><strong>Award:</strong> Certificate of Participation</p>
@@ -41,7 +41,7 @@
                 </div>
             </div>
              <div class="certificate-item">
-                <h3>Programming Certification</h3>
+                <h3>Online Course</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
                         <p><strong>Award:</strong> Certificate of Course Completion</p>
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="certificate-item">
-                <h3>Programming Certification</h3>
+                <h3>Online Course</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
                         <p><strong>Certificate:</strong> Certificate of Course Completion</p>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="certificate-item">
-                <h3>Project Recognition</h3>
+                <h3>Webinar Participation</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
                         <p><strong>Award:</strong> Certificate of Participation</p>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="certificate-item">
-                <h3>Project Recognition</h3>
+                <h3>Online Course</h3>
                 <div class="certificate-content">
                     <div class="certificate-info">
                         <p><strong>Award:</strong> Certificate of Course Completion</p>
