modified:   projects.html 	modified:   style.css

--- a/projects.html
+++ b/projects.html
@@ -28,15 +28,21 @@
         <section id="projects">
             <h2>My Projects</h2>
             <div class="project-item" onclick="toggleDetails('project1')">
-                <h3>Bee Colony Monitoring System <span class="arrow">▼</span></h3>
+                <h3>DermaGlow AI <span class="arrow">▼</span></h3>
                 <div id="project1" class="project-details">
                     <p><strong>Technologies:</strong> Python, OpenCV, Machine Learning</p>
-                    <p><strong>Description:</strong> Developed a system using image processing and machine learning to detect brood stages and queen cell maturity from real bee farm data.</p>
+                    <p><strong>Description:</strong>The Dermatology Essentials and Product Ingredient Analyzer Bot is a tool designed for individuals to help them in developing smart choices about cosmetic essentials and skincare decisions. With the increase of beauty influencers, finding the right products for our skin can be demanding. This proposed bot is designed to analyzethe cosmetic product ingredients in terms of what benefits are associated with those ingredients and what side effects or allergic reactions they can cause. It also identifies users’ skin types and suggests appropriate ingredients and products based on their skin conditions, allergies, and spending limits.</p>
                     <p><strong>Features:</strong></p>
                     <ul>
-                        <li>Real-time image processing</li>
-                        <li>ML model for stage detection</li>
-                        <li>Data visualization dashboard</li>
+                        <li>Cosmetic Product Ingredient Analyzer</li>
+                        <li>Skin type assessment</li>
+                        <li>Allergen and irritant detection</li>
+                        <li>Ingredient benefits explanation</li>
+                        <li>Personalized skincare routine suggestions</li>
+                        <li>AI-powered chatbot interaction</li>
+                        <li> Skincare product dataset management</li>
+                    </ul>
+                    <p><strong>Link:</strong> https://github.com/renalynpino/DermaGlow-AI</p>
                     </ul>
                 </div>
             </div>
@@ -51,7 +57,26 @@
                         <li>Customer management</li>
                         <li>Repair tracking system</li>
                         <li>Invoice generation</li>
+                       </ul>
+                </div>
+            </div>
+                
+            <div class="project-item" onclick="toggleDetails('project3')">
+                <h3>Client Appointment and Monitoring Management System for Laguna 
+                    Parole and Probation Office with SMS Notification (Enhanced/Debugged)<span class="arrow">▼</span></h3>
+                <div id="project3" class="project-details">
+                    <p><strong>Technologies:</strong> XAMPP, MySQL, phpMyAdmin, SQL Database</p>
+                    <p><strong>Description:</strong> This study presents the development and evaluation of a web-based Client Appointment and Monitoring Management System with SMS Notification designed specifically for the Laguna Parole and Probation Office (LPPO) in Sta. Cruz, Laguna, a capstone project system originally developed by Gilbert C. Etalla, Jerwin R. Pontipedra, and Rana S. Edgar Jr. Our goal on the other hand, is to enhance the system’s overall performance, user interface and other features for the LPPO. With Computer Science implementation, this improved version aims to make client scheduling more efficient, reduce missed appointments and help staff manage records more effectively.</p>
+                    <p><strong>Features:</strong></p>
+                    <ul>
+                        <li>Client account registration and verification (OTP via email)</li>
+                        <li>Appointment scheduling and monitoring</li>
+                        <li>Client status management (active, denied, revoked, archived)</li>
+                        <li>Automated parole/probation assignment</li>
+                        <li>Admin dashboard with search and record management</li>
+                        <li>LPPO assistant chatbot for user support</li>
                     </ul>
+                    <p><strong>Link:</strong> https://github.com/renalynpino/Sofware-Engineering-2-Final-Project</p>
                 </div>
             </div>
         </section>
